--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,7 @@ dependencies {
     implementation 'com.zaxxer:HikariCP:4.0.3'  // Add HikariCP dependency
     implementation 'mysql:mysql-connector-java:8.0.26'  // Add MySQL connector dependency
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'  // Add JUnit 5 dependency
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'  // Add JUnit 5 test engine dependency
+    androidTestImplementation "androidx.test:core:1.5.0"
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
 }
